<resources>
    <string name="app_name">Badminton</string>
    <string-array name="jambuka">
        <item>Jam Buka</item>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="jamtutup">
        <item>Jam Tutup</item>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="jammulai">
        <item>Jam Mulai Sewa</item>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="jamselesai">
        <item>Jam Selesai Sewa</item>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="page_title">
        <item>Selesai</item>
        <item>Baru</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Sabtu, 27 April 2019</string>
    <string name="sewa_lapangan_diproses">Sewa lapangan diproses</string>
    <string name="membantu_mencari_dan_memesan_nlapangan_badminton_di_sekitar_anda">Membantu mencari dan memesan Lapangan Badminton di sekitar anda</string>
    <string name="daftar_penyedia">Daftar penyedia</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_memiliki_akun_daftar_disini">Belum memiliki akun? Daftar disini</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="pesan">Pesan</string>
    <string name="jumlah_lapangan">Jumlah lapangan</string>
    <string name="harga_sewa_per_jam">Harga sewa per jam</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="no_hp">No HP</string>
    <string name="sudah_memiliki_akun_login_disini">Sudah memiliki akun? Login disini</string>
    <string name="daftar_lapangan">Daftar Lapangan</string>
    <string name="nama_lapangan">Nama Lapangan</string>
    <string name="alamat_lapangan">Alamat lapangan</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="tempat_a">Tempat A</string>
    <string name="rp_20_000_jam">Rp 20,000 / jam</string>
    <string name="_0813123123123">0813123123123</string>
    <string name="_08_00_20_00">08:00 - 20:00</string>
    <string name="telepon">Telepon</string>
    <string name="cek_peta">Cek Peta</string>
    <string name="lokasi_lainnya">Lokasi Lainnya</string>
    <string name="jl_sumbersari_no_20_malang_jawa_timur">Jl. Sumbersari no 20 Malang Jawa Timur</string>
    <string name="aktivasi">Aktivasi</string>
    <string name="lapangan_a">Lapangan A</string>
    <string name="jl_watugong_no_brapa">Jl. Watugong no Brapa</string>
    <string name="_12_00_13_00">12:00 - 13:00</string>
    <string name="proses_penjemputan">Proses penjemputan</string>
    <string name="reservasi">Reservasi</string>
    <string name="edit">Edit</string>
    <string name="keluar">Keluar</string>
    <string name="dummy">Dummy</string>
    <string name="kategori">Kategori</string>
    <string name="none">None</string>
    <string name="alamat">Alamat</string>
    <string name="kordinat">Kordinat</string>
    <string name="penyedia_non_aktif">Penyedia Non Aktif</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="dummy_name">Name</string>
    <string name="jl_watugong_no_20">Jl. Watugong no 20</string>
    <string name="foto_lapangan">Foto Lapangan</string>
    <string name="penyedia_aktif">Penyedia Aktif</string>
    <string name="pesanan">Pesanan</string>
    <string name="riwayat">Riwayat</string>
    <string name="review_reservasi">Review Reservasi</string>
    <string name="nama_penyewa">Nama Penyewa</string>
    <string name="tony_stark">Tony Stark</string>
    <string name="lupa_passwords">Lupa Password</string>
    <string name="reminder">Waktu bermain tinggal 10 menti</string>

</resources>
