<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".penyewa.SignUpPage"
    tools:targetApi="o">

        <Button
            android:id="@+id/backbutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_chevron_left_black_24dp"
            android:backgroundTint="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/daftar"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/buttonborder"
                android:hint="@string/nama"
                android:inputType="textPersonName"
                android:paddingHorizontal="16dp"
                tools:targetApi="o" />

            <EditText
                android:layout_marginTop="16dp"
                android:id="@+id/noHp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/buttonborder"
                android:hint="@string/no_hp"
                android:inputType="number"
                android:paddingHorizontal="16dp"
                tools:targetApi="o" />

            <EditText
                android:layout_marginTop="16dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/buttonborder"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttonborder"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttondaftar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/buttonborder"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/Transparent"
                android:text="@string/sudah_memiliki_akun_login_disini"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </LinearLayout>
</RelativeLayout>