<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.TempatPageAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backbutton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_chevron_left_black_24dp"
                android:backgroundTint="@android:color/white" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="right"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderCircularHandlerEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="4"
                    app:sliderStartAutoCycle="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/trending_gradient_shape_2" />

            </FrameLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/namatempat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:text="@string/tempat_a"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:text="@string/rp_20_000_jam"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/alamattempat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:paddingHorizontal="16dp"
            android:text="@string/jl_sumbersari_no_20_malang_jawa_timur"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/notelepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:drawableTint="@color/colorPrimary"
            android:paddingHorizontal="16dp"
            android:textSize="16sp"
            android:text="@string/_0813123123123"
            android:textColor="@android:color/black"
            tools:targetApi="m" />


        <TextView
            android:id="@+id/jambuka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_clock_black_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:paddingHorizontal="16dp"
            android:text="@string/_08_00_20_00"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            tools:targetApi="m" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            tools:targetApi="o">

            <Button
                android:id="@+id/btn_telepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonsolid3"
                android:text="@string/telepon"
                android:layout_marginRight="8dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_peta"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/buttonsolid3"
                android:text="@string/cek_peta"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/aktivasibutton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="3"
            android:background="@drawable/buttonsolid4"
            android:text="@string/aktivasi"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:targetApi="o" />

    </LinearLayout>
</ScrollView>