<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".penyewa.PesanPage">

    <Button
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_chevron_left_black_24dp" />

    <LinearLayout
        android:id="@+id/lltanggal"
        android:layout_below="@id/backbutton"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/pilih_waktu"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tanggal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/pilih_tanggal"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/buttonborder"
            android:paddingHorizontal="16dp"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/jammulai"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonborder"
            android:paddingHorizontal="8dp"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/jamselesai"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonborder"
            android:paddingHorizontal="8dp"
            tools:targetApi="o" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/btnpesan"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnpesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonsolid4"
        android:text="@string/pesan"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:targetApi="o" />

</RelativeLayout>