<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".penyedia.SignUp2PenyediaPage"
    tools:targetApi="o">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <Button
            android:id="@+id/backbutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_chevron_left_black_24dp" />

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Lengkapi Data"
                android:textColor="@color/colorAccent"
                android:textSize="32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/uploadfotolapangan1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <ImageView
                    android:id="@+id/uploadfotolapangan2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <ImageView
                    android:id="@+id/uploadfotolapangan3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <ImageView
                    android:id="@+id/uploadfotolapangan4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                <ImageView
                    android:id="@+id/uploadfotolapangan5"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />

            </LinearLayout>


            <EditText
                android:id="@+id/jumlahlapangan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttonborder"
                android:hint="@string/jumlah_lapangan"
                android:inputType="number"
                android:paddingHorizontal="16dp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/hargalapangan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttonborder"
                android:hint="@string/harga_sewa_per_jam"
                android:inputType="number"
                android:paddingHorizontal="16dp"
                tools:targetApi="o" />

            <Spinner
                android:id="@+id/jambuka"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttonborder"
                android:paddingHorizontal="8dp"
                tools:targetApi="o" />

            <Spinner
                android:id="@+id/jamtutup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttonborder"
                android:paddingHorizontal="8dp"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fasilitas yang tersedia"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_parkiran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Parkiran"
                android:textColor="@android:color/darker_gray" />

            <CheckBox
                android:id="@+id/cb_toilet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Toilet"
                android:textColor="@android:color/darker_gray" />

            <CheckBox
                android:id="@+id/cb_ruangganti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ruang Ganti"
                android:textColor="@android:color/darker_gray" />


            <CheckBox
                android:id="@+id/cb_kantin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kantin"
                android:textColor="@android:color/darker_gray" />

            <CheckBox
                android:id="@+id/cb_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wi-Fi"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>


        <Button
            android:id="@+id/buttondaftarpenyedia2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/buttonborder"
            android:text="@string/konfirmasi"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>